# kinova_ros

./: .gitignore  DEbug
kinova_bringup/launch/config/: multiple_robots.yaml  robot_parameters.yaml
kinova_demo/nodes/kinova_demo/: gravity_compensated_mode.py
kinova_description/hollowPrism/: manifest.xml
kinova_description/hollowPrism/meshes/: hollowPrism.STL
kinova_description/hollowSylinder/: manifest.xml
kinova_description/hollowSylinder/urdf/: hollowSylinder.urdf
kinova_description/meshes/: hollowSylinder.STL
kinova_description/urdf/: hollowPrism.urdf  j2n6s300_standalone (copy).xacro  j2n6s300_standalone.urdf  j2n6s300_standalone_111.urdf
kinova_moveit/jrc18sia_motion_planner/: CMakeLists.txt  package.xml
kinova_moveit/jrc18sia_motion_planner/include/jrc18sia_motion_planner/: jrc18sia_kinematics_parser.h  jrc18sia_motion_planner.h
kinova_moveit/jrc18sia_motion_planner/src/: jrc18sia_kinematics_parser.cpp  jrc18sia_motion_planner.cpp  jrc18sia_motion_planner_test.cpp
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt  Log  package.xml
kinova_moveit/kinova_arm_moveit_demo/config/: default_pose.yaml  jrc18sia_motion_planner_parameters.yaml  kinova_arm_moveit_demo_parameters.yaml
kinova_moveit/kinova_arm_moveit_demo/include/: add_scene_objects.h  functions.h  globals.h  jrc18sia_motion_planner.h  jrc18sia_target_info.h  motion_planner.h  notice_pub_sub.h  parser.h  pick_place.h
kinova_moveit/kinova_arm_moveit_demo/launch/: jrc18sia_kinova_arm_bringup.launch  jrc18sia_motion_planner.launch  kinova_arm_moveit_demo.launch  test.launch
kinova_moveit/kinova_arm_moveit_demo/scripts/: joint_control.py
kinova_moveit/kinova_arm_moveit_demo/src/: action_control.cpp  add_scene_objects.cpp  arm_test.cpp  basicControl.1.cpp  basicControl.cpp  cartesianPlan.cpp  functions.cpp  globals.cpp  jrc18sia_kinematics_parser.cpp  jrc18sia_motion_planner.cpp  jrc18sia_motion_planner_test.cpp  main.cpp  mainControl-20181025.cpp  mainControl-sweep (another copy).cpp  mainControl-sweep-bak.cpp  mainControl-sweep.cpp  mainControl-wangcong.cpp  mainControl.cpp  mainControlV2.cpp  mianControl.cpp  motion_plan.cpp  motion_planner.cpp  notice_pub_sub (another copy).cpp  notice_pub_sub.cpp  parser.cpp  pick_place.cpp  planWithObstacle.cpp  sweep_18.bak.cpp  visualControl(backup).cpp  visualControl.cpp  work_scene.cpp
kinova_moveit/robot_configs/j2n6s300_moveit_config/config/: joint_limits.yaml  kinematics.yaml
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: j2n6s300_demo.launch  move_group_j2n6s300.launch  moveit.rviz  trajectory_execution.launch.xml
robot_tf_setup/: CMakeLists.txt
robot_tf_setup/launch/: robot_tf_setup.launch
robot_tf_setup/src/: ee_pos_pub.cpp
